--- a/src/Archmage/GameBundle/Resources/views/Magic/research.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/research.html.twig
@@ -79,14 +79,13 @@
                 </div>
             </div>
         </div>
-        {% endfor %}
-        {% if player.researchs is empty and spells is empty %}
+        {% else %}
         <div class="container">
             <div class="col-xs-12 alert alert-danger text-center" role="alert">
-                <i class="fa fa-fw fa-lg fa-exclamation-triangle"></i> Ya no tienes nada nuevo que investigar. Tal vez puedas comprar alguno más en el <i class="fa fa-fw fa-lg fa-user-secret"></i><a href="{{ path( 'archmage_game_kingdom_auction' ) }}">Mercado negro</a>.
+                <i class="fa fa-fw fa-lg fa-exclamation-triangle"></i> Ya no tienes más hechizos nuevos que investigar. Tal vez puedas comprar alguno más en el <i class="fa fa-fw fa-lg fa-user-secret"></i><a href="{{ path( 'archmage_game_kingdom_auction' ) }}">Mercado negro</a>.
             </div>
         </div>
-        {% endif %}
+        {% endfor %}
     </div>
 </div>
 {% endblock %}
