--- a/src/Archmage/GameBundle/Resources/public/css/style.css
+++ b/src/Archmage/GameBundle/Resources/public/css/style.css
@@ -233,3 +233,12 @@ html {-webkit-text-size-adjust: none !important;}
 .fa {
     margin-right: 2px !important;
 }
+.panel-middle {
+    padding: 10px 15px;
+    background-color: #3E444C;
+    -webkit-border-radius: 0px;
+    -moz-border-radius: 0px;
+    border-radius: 0px;
+    border-top: 1px solid rgba(0, 0, 0, 0.6);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.6);
+}
