--- a/src/Archmage/GameBundle/Resources/views/Army/attack.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Army/attack.html.twig
@@ -11,33 +11,31 @@
             </div>
             <form id="attack" name="attack" class="form-inline" data-toggle="validator" action="{{ path('archmage_game_army_attack') }}" method="post" role="form">
                 <div class="row">
-                    <div class="col-xs-12 col-md-6">
+                    <div class="col-xs-12">
                         <div class="panel panel-default">
                             <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-group"></i>Tropas</div>
-                            <div class="panel-body text-responsive text-right">
+                            <div class="panel-body text-responsive">
                                 {% for troop in player.troops %}
-                                <div class="form-group has-feedback">
-                                    <div class="input-group">
-                                        <div class="input-group-addon">
-                                            <label for="{{ troop.id }}"><span class="label label-{{ troop.unit.faction.class }}"><a href="{{ path('archmage_game_home_help') }}#{{ troop.unit.name|slug }}">{{ troop.unit.name }}</a></span> [{{ troop.quantity|nf }}]</label>
-                                        </div>
+                                <div class="col-xs-6 text-right">
+                                    <span class="label label-{{ troop.unit.faction.class }}"><a href="{{ path('archmage_game_home_help') }}#{{ troop.unit.name|slug }}">{{ troop.unit.name }}</a></span>
+                                </div>
+                                <div class="col-xs-6 text-left">
+                                    <div class="form-group has-feedback">
                                         <input type="number" class="form-control" id="{{ troop.id }}" name="{{ troop.id }}" min="0" max="{{ troop.quantity }}" value="{{ troop.quantity }}" required/>
                                         <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
                                     </div>
                                 </div>
                                 {% endfor %}
-                                {% for contract in player.contracts %}
-                                <span class="label label-{{ contract.hero.faction.class }}"><a href="{{ path('archmage_game_home_help') }}#{{ contract.hero.name|slug }}">{{ contract.hero.name }}</a></span>
-                                {% endfor %}
                             </div>
-                            <div class="panel-footer text-center">
-                                Tropas que llevarás a la batalla, en este orden.
+                            <div class="panel-middle text-center"><i class="fa fa-fw fa-lg fa-user"></i>Héroes</div>
+                            <div class="panel-body text-center">
+                            {% for contract in player.contracts %}
+                                <div class="col-xs-12 text-center">
+                                    <span class="label label-{{ contract.hero.faction.class }}"><a href="{{ path('archmage_game_home_help') }}#{{ contract.hero.name|slug }}">{{ contract.hero.name }}</a></span>
+                                </div>
+                            {% endfor %}
                             </div>
-                        </div>
-                    </div>
-                    <div class="col-xs-12 col-md-6">
-                        <div class="panel panel-default">
-                            <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-cogs"></i>Opciones</div>
+                            <div class="panel-middle text-center"><i class="fa fa-fw fa-lg fa-cogs"></i>Opciones</div>
                             <div class="panel-body text-center">
                                 <div class="row">
                                     <div class="col-xs-12">
