Mejorados controladores, terminadas unitfixtures con sus skillfixtures.

--- a/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
@@ -218,7 +218,7 @@
                             <img class="custom-thumbnail" src="{{ asset( artifact.image ) }}">
                         </div>
                         <div class="col-xs-8 text-padded">
-                            <i class="fa fa-fw fa-joomla"></i>{{ artifact.description|raw }}
+                            <p><i class="fa fa-fw fa-joomla"></i>{{ artifact.description|raw }}</p>
                         </div>
                     </div>
                 </div>
