--- a/src/Archmage/GameBundle/Resources/public/css/style.css
+++ b/src/Archmage/GameBundle/Resources/public/css/style.css
@@ -72,7 +72,7 @@ h1 small, h2 small, h3 small, h4 small, h5 small, h6 small, .h1 small, .h2 small
 }
 .label {
     font-size: 95%;
-    padding: 0.2em;
+    padding: 0.2em 0.4em 0.2em 0.4em;
 }
 .label-extra {
     background-color: #000000;
