--- a/src/Archmage/GameBundle/Resources/views/Account/message.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Account/message.html.twig
@@ -26,24 +26,26 @@
                     {% for message in player.messages %}
                     <tr>
                         <td class="text-center">{{ message.datetime|date('d/m/Y H:i:s') }}</td>
-                        <td class="text-center"><a href="{{ path('archmage_game_account_profile', { 'player': message.owner.nick|default('Admin') } ) }}" class="link">{{ message.owner.nick|default('Admin') }}</a></td>
+                        <td class="text-center"><a href="{{ path('archmage_game_account_profile', { 'player': message.owner.nick|default('Admin') } ) }}" class="link"><span class="label label-{{ message.owner.faction.class|default('extra') }}">{{ message.owner.nick|default('Admin') }}</span></a></td>
                         <td class="text-center"><i class="fa fa-fw fa-envelop"></i><a href="{{ path( 'archmage_game_account_message', { 'hash': message.hash } ) }}" class="link">{{ message.subject|truncate(20) }}</a></td>
                     </tr>
                     {% endfor %}
                 </tbody>
             </table>
+            {# show message #}
             {% else %}
-                {% for i in 1..3 %}
-                    {% if loop.index is odd %}
-            <div class="col-xs-12 col-md-8 alert alert-success text-center" role="alert">
-                Texto de prueba <i class="fa fa-fw fa-lg fa-caret-square-o-right"></i>
+                {% for i in 0..text['content']|length - 1 %}
+            <div class="col-xs-12 col-md-{{ text['content'][i]['length'] }} col-md-offset-{{ text['content'][i]['offset'] }} alert alert-{{ text['content'][i]['class'] }} text-{{ text['content'][i]['align'] }} text-responsive" role="alert">
+                <i class="fa fa-fw fa-lg fa-exclamation-triangle"></i>{{ text['content'][i]['text'] }}
             </div>
-                    {% else %}
-            <div class="col-xs-12 col-md-offset-4 col-md-8 alert alert-danger text-center" role="alert">
-                <i class="fa fa-fw fa-lg fa-caret-square-o-left"></i> Texto de prueba
-            </div>
-                    {% endif %}
                 {% endfor %}
+            <div class="col-xs-12 col-md-6 col-md-offset-3">
+                <div class="btn-group btn-group-justified" role="group" aria-label="...">
+                    <a href="{{ path('archmage_game_account_message') }}" class="btn btn-default"><i class="fa fa-fw fa-arrow-left"></i><span class="hidden-xs">Volver</span></a>
+                    <a href="{{ path('archmage_game_account_message') }}" class="btn btn-default"><i class="fa fa-fw fa-mail-reply"></i><span class="hidden-xs">Responder</span></a>
+                    <a href="{{ path('archmage_game_account_message') }}" class="btn btn-default"><i class="fa fa-fw fa-trash"></i><span class="hidden-xs">Borrar</span></a>
+                </div>
+            </div>
             {% endif %}
         </div>
     </div>
