--- a/src/Archmage/GameBundle/Resources/views/Army/attack.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Army/attack.html.twig
@@ -10,87 +10,97 @@
                 <h1><i class="fa fa-fw fa-flag"></i>Atacar<br><small><i class="fa fa-fw fa-hourglass"></i>{{ player.turns|nf }}</small></h1>
             </div>
             <form id="attack" name="attack" class="form-inline" data-toggle="validator" action="{{ path('archmage_game_army_attack') }}" method="post" role="form">
-                <div class="row">
-                    <div class="col-xs-12">
-                        <div class="panel panel-default">
-                            <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-group"></i>Tropas</div>
+                {% for troop in player.troops if troop.quantity > 0 %}
+                <div class="col-xs-12 col-md-6">
+                    <div class="panel panel-{{ troop.unit.faction.class }}">
+                        <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-group"></i><a href="{{ path('archmage_game_home_help') }}#{{ troop.unit.name|slug }}" class="link">{{ troop.unit.name }}</a> [{{ troop.quantity|nf }}]</div>
+                        <div class="panel-body text-responsive">
+                            <div class="row">
+                                <div class="col-xs-3 col-sm-2">
+                                    <img class="custom-thumbnail" src="{{ asset( troop.unit.image ) }}">
+                                </div>
+                                <div class="col-xs-9 col-sm-10 text-center">
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                {% endfor %}
+                {% for contract in player.contracts %}
+                    <div class="col-xs-12 col-md-6">
+                        <div class="panel panel-{{ contract.hero.faction.class }}">
+                            <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-user"></i><a href="{{ path('archmage_game_home_help') }}#{{ contract.hero.name|slug }}" class="link">{{ contract.hero.name }}</a></div>
                             <div class="panel-body text-responsive">
-                                {% for troop in player.troops %}
-                                <div class="col-xs-6 text-right">
-                                    <span class="label label-{{ troop.unit.faction.class }}"><a href="{{ path('archmage_game_home_help') }}#{{ troop.unit.name|slug }}">{{ troop.unit.name }}</a></span>
-                                </div>
-                                <div class="col-xs-6 text-left">
-                                    <div class="form-group has-feedback">
-                                        <input type="number" class="form-control" id="{{ troop.id }}" name="{{ troop.id }}" min="0" max="{{ troop.quantity }}" value="{{ troop.quantity }}" required/>
-                                        <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
-                                    </div>
-                                </div>
-                                {% endfor %}
-                            </div>
-                            <div class="panel-middle text-center"><i class="fa fa-fw fa-lg fa-user"></i>Héroes</div>
-                            <div class="panel-body text-center">
-                            {% for contract in player.contracts %}
-                                <div class="col-xs-12 text-center">
-                                    <span class="label label-{{ contract.hero.faction.class }}"><a href="{{ path('archmage_game_home_help') }}#{{ contract.hero.name|slug }}">{{ contract.hero.name }}</a></span>
-                                </div>
-                            {% endfor %}
-                            </div>
-                            <div class="panel-middle text-center"><i class="fa fa-fw fa-lg fa-cogs"></i>Opciones</div>
-                            <div class="panel-body text-center">
                                 <div class="row">
-                                    <div class="col-xs-12">
-                                        <div class="form-group">
-                                            <div class="input-group">
-                                                <select class="form-control selectpicker show-tick" id="target" name="target" data-live-search="true">
-                                                    <option>Objetivo</option>
-                                                    {% for target in targets %}
-                                                        {# disabled="disabled" si eres el mismo player o si no les puedes atacar por player.power #}
-                                                        <option value="{{ target.id }}" data-subtext="{{ target.power|nf }}">{{ target.nick }}</option>
-                                                    {% endfor %}
-                                                </select>
-                                            </div>
+                                    <div class="col-xs-3 col-sm-2">
+                                        <img class="custom-thumbnail" src="{{ asset( contract.hero.image ) }}">
+                                    </div>
+                                    <div class="col-xs-9 col-sm-10 text-center">
+                                        <input type="hidden" id="contract" name="contract" value="{{ contract.id }}" required />
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                {% endfor %}
+                <div class="col-xs-12 col-md-6 col-md-offset-3">
+                    <div class="panel panel-default">
+                        <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-cogs"></i>Opciones</div>
+                        <div class="panel-body text-center">
+                            <div class="row">
+                                <div class="col-xs-12">
+                                    <div class="form-group">
+                                        <div class="input-group">
+                                            <select class="form-control selectpicker show-tick" id="target" name="target" data-live-search="true">
+                                                <option>Objetivo</option>
+                                                {% for target in targets %}
+                                                    {# disabled="disabled" si eres el mismo player o si no les puedes atacar por player.power #}
+                                                    <option value="{{ target.id }}" data-subtext="{{ target.power|nf }}">{{ target.nick }}</option>
+                                                {% endfor %}
+                                            </select>
                                         </div>
                                     </div>
-                                    <div class="col-xs-12">
-                                        <div class="form-group">
-                                            <div class="input-group">
-                                                <select class="form-control selectpicker show-tick" id="research" name="research" data-live-search="true">
-                                                    <option>Hechizo</option>
-                                                    {% for research in player.researchs if research.active and research.spell.skill.battle %}
-                                                        <option value="{{ research.id }}">{{ research.spell.name }}</option>
-                                                    {% endfor %}
-                                                </select>
-                                            </div>
+                                </div>
+                                <div class="col-xs-12">
+                                    <div class="form-group">
+                                        <div class="input-group">
+                                            <select class="form-control selectpicker show-tick" id="research" name="research" data-live-search="true">
+                                                <option>Hechizo</option>
+                                                {% for research in player.researchs if research.active and research.spell.skill.battle %}
+                                                    <option value="{{ research.id }}">{{ research.spell.name }}</option>
+                                                {% endfor %}
+                                            </select>
                                         </div>
                                     </div>
-                                    <div class="col-xs-12">
-                                        <div class="form-group">
-                                            <div class="input-group">
-                                                <select class="form-control selectpicker show-tick" id="item" name="item" data-live-search="true">
-                                                    <option>Artefacto</option>
-                                                    {% for item in player.items if item.quantity > 0 and item.artifact.skill.battle %}
-                                                        <option value="{{ item.id }}">{{ item.artifact.name }}</option>
-                                                    {% endfor %}
-                                                </select>
-                                            </div>
+                                </div>
+                                <div class="col-xs-12">
+                                    <div class="form-group">
+                                        <div class="input-group">
+                                            <select class="form-control selectpicker show-tick" id="item" name="item" data-live-search="true">
+                                                <option>Artefacto</option>
+                                                {% for item in player.items if item.quantity > 0 and item.artifact.skill.battle %}
+                                                    <option value="{{ item.id }}">{{ item.artifact.name }}</option>
+                                                {% endfor %}
+                                            </select>
                                         </div>
                                     </div>
-                                    <div class="col-xs-12">
-                                        <div class="form-group">
-                                            <div class="input-group">
-                                                <select class="form-control selectpicker show-tick" id="attack" name="attack" data-live-search="true">
-                                                    <option value="regular">Normal</option>
-                                                    <option value="pillage">Pillaje</option>
-                                                    <option value="siege">Asedio</option>
-                                                </select>
-                                            </div>
+                                </div>
+                                <div class="col-xs-12">
+                                    <div class="form-group">
+                                        <div class="input-group">
+                                            <select class="form-control selectpicker show-tick" id="attack" name="attack" data-live-search="true">
+                                                <option value="regular">Normal</option>
+                                                <option value="pillage">Pillaje</option>
+                                                <option value="siege">Asedio</option>
+                                            </select>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                            <div class="panel-footer text-center">
-                                <button type="submit" class="btn btn-default"><i class="fa fa-fw fa-lg fa-hourglass-half"></i>Atacar</button>
-                            </div>
+                        </div>
+                        <div class="panel-footer text-center">
+                            <button type="submit" class="btn btn-default"><i class="fa fa-fw fa-lg fa-hourglass-half"></i>Atacar</button>
                         </div>
                     </div>
                 </div>
