--- a/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Ayuda{% endblock %}
 
 {% block body %}
-<div class="container">
+<div class="container" xmlns="http://www.w3.org/1999/html">
     <div class="row">
         <div class="col-xs-12"><a name="top"></a>
             <div class="page-header text-center">
@@ -13,28 +13,28 @@
         <div class="col-xs-12"><a name="objetivo"></a>
             <div class="panel panel-default">
                 <div class="panel-heading text-center">Objetivo</div>
-                <div class="panel-body text-responsive">
-                    <p>blabla</p>
+                <div class="panel-body text-responsive text-only">
+                    Información acerca del objetivo del juego.
                 </div>
             </div>
         </div>
         <div class="col-xs-12"><a name="batalla"></a>
             <div class="panel panel-default">
                 <div class="panel-heading text-center">Batalla</div>
-                <div class="panel-body text-center text-responsive">
+                <div class="panel-body text-center text-responsive text-only">
                     <div class="row">
                         <div class="col-xs-12 col-md-offset-1 col-md-5">
                             <img class="factions" src="{{ asset('bundles/archmagegame/images/factions.png') }}">
                             <div class="caption">
-                                <h3>Bonus de facción</h3>
-                                <small>Cada facción tiene una opuesta y aumentará su daño en combate un 25% contra ella. Así, si un <span class="label label-danger">Caos</span> atacase a un <span class="label label-primary">Sagrado</span> u <span class="label label-warning">Oscuridad</span>, su bonus sería del 0%; si atacase a un <span class="label label-success">Naturaleza</span> o <span class="label label-default">Neutral</span>, del +25%; y si atacase a un <span class="label label-info">Fantasmal</span>, -25%.</small>
+                                <h2>Bonus de facción</h2>
+                                Cada facción tiene una opuesta y aumentará su daño en combate un 25% contra ella. Así, si un <span class="label label-danger">Caos</span> atacase a un <span class="label label-primary">Sagrado</span> u <span class="label label-warning">Oscuridad</span>, su bonus sería del 0%; si atacase a un <span class="label label-success">Naturaleza</span> o <span class="label label-default">Neutral</span>, del +25%; y si atacase a un <span class="label label-info">Fantasmal</span>, -25%.
                             </div>
                         </div>
                         <div class="col-xs-12 col-md-5">
                             <img class="factions" src="{{ asset('bundles/archmagegame/images/units.png') }}">
                             <div class="caption">
-                                <h3>Bonus de unidad</h3>
-                                <small>Cada unidad tiene un tipo opuesto y aumentará su daño en combate un 25% contra ella. Así, si una <span class="label label-default">Distancia</span> ataca a una <span class="label label-default">Voladora</span>, tendrá un bonus del 25% adicional, pero si ataca a cualquier otra, no tendrá bonificación.</small>
+                                <h2>Bonus de unidad</h2>
+                                Cada unidad tiene un tipo opuesto y aumentará su daño en combate un 25% contra ella. Así, si una tropa <span class="label label-extra">Distancia</span> ataca a una <span class="label label-extra">Voladora</span>, tendrá un bonus del 25% adicional, pero si ataca a cualquier otra, no tendrá bonificación.
                             </div>
                         </div>
                     </div>
@@ -44,8 +44,8 @@
         <div class="col-xs-12"><a name="subasta"></a>
             <div class="panel panel-default">
                 <div class="panel-heading text-center">Subasta</div>
-                <div class="panel-body text-responsive">
-                    <p>blabla</p>
+                <div class="panel-body text-responsive text-only">
+                    Información acerca de la subasta.
                 </div>
             </div>
         </div>
@@ -64,13 +64,13 @@
                         <div class="col-xs-4">
                             <img class="custom-thumbnail" src="{{ asset(faction.image) }}">
                         </div>
-                        <div class="col-xs-8">
-                            <p>{{ faction.description }}</p>
+                        <div class="col-xs-8 text-only">
+                            {{ faction.description }}
                         </div>
                     </div>
                 </div>
                 <div class="panel-footer text-center">
-                    {{ faction.slogan }}
+                    <span class="label label-{{ faction.class }}">{{ faction.slogan }}</span>
                 </div>
             </div>
         </div>
@@ -128,7 +128,7 @@
                             <img class="custom-thumbnail" src="{{ asset( unit.image ) }}">
                         </div>
                         <div class="col-xs-8 text-padded">
-                            <div class="col-xs-4"><i class="fa fa-fw fa-rocket"></i>{{ unit.attack|nf }}</div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-crosshairs"></i>{{ unit.attack|nf }}</div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-shield"></i>{{ unit.defense|nf }}</div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-flash"></i>{{ unit.speed }}</div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>{{ unit.goldMaintenance|nf }}</div>
@@ -223,7 +223,7 @@
                     </div>
                 </div>
                 <div class="panel-footer text-center">
-                    Se obtiene en la subasta.
+                    Se obtiene en la <span class="label label-extra">Subasta</span>.
                 </div>
             </div>
         </div>
