--- a/src/Archmage/GameBundle/Resources/public/css/style.css
+++ b/src/Archmage/GameBundle/Resources/public/css/style.css
@@ -43,17 +43,12 @@ img.background {
 .text-only {
     padding: 15px;
 }
-@media screen and (max-width: 400px) and (orientation: portrait) {
+@media screen and (max-width: 400px) {
     .text-responsive {
         font-size:10px !important;
     }
 }
-@media screen and (min-width: 401px) and (max-width: 600px) and (orientation: portrait) {
-    .text-responsive {
-        font-size:12px !important;
-    }
-}
-@media screen and (min-width: 601px) and (max-width: 700px) and (orientation: portrait) {
+@media screen and (min-width: 401px) and (max-width: 700px) {
     .text-responsive {
         font-size:14px !important;
     }
