--- a/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
@@ -92,17 +92,20 @@
                         </div>
                         <div class="col-xs-8 text-padded">
                             <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>{{ building.goldCost|nf }}</div>
-                            <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>{{ building.manaCost|nf }}</div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-users"></i>{{ building.peopleCost|nf }}</div>
-                            <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>{{ building.goldMaintenance|nf }}</div>
-                            <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>{{ building.manaMaintenance|nf }}</div>
-                            <div class="col-xs-4"><i class="fa fa-fw fa-users"></i>{{ building.peopleMaintenance|nf }}</div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>{{ building.manaCost|nf }}</div>
+
                             <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>{{ building.goldResource|nf }}</div>
-                            <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>{{ building.manaResource|nf }}</div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-users"></i>{{ building.peopleResource|nf }}</div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>{{ building.manaResource|nf }}</div>
+
                             <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>{{ building.goldCap|nf }}</div>
-                            <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>{{ building.manaCap|nf }}</div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-users"></i>{{ building.peopleCap|nf }}</div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>{{ building.manaCap|nf }}</div>
+
+                            <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>{{ building.goldMaintenance|nf }}</div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-users"></i>{{ building.peopleMaintenance|nf }}</div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>{{ building.manaMaintenance|nf }}</div>
                         </div>
                     </div>
                 </div>
@@ -132,8 +135,8 @@
                             <div class="col-xs-4"><i class="fa fa-fw fa-shield"></i>{{ unit.defense|nf }}</div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-flash"></i>{{ unit.speed }}</div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>{{ unit.goldMaintenance|nf }}</div>
-                            <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>{{ unit.manaMaintenance|nf }}</div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-users"></i>{{ unit.peopleMaintenance|nf }}</div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>{{ unit.manaMaintenance|nf }}</div>
                             <div class="col-xs-6"><i class="fa fa-fw fa-user"></i>{{ unit.family.name }}</div>
                             <div class="col-xs-6"><i class="fa fa-fw fa-cogs"></i>{{ unit.type.name }}</div>
                         </div>
@@ -162,8 +165,8 @@
                         </div>
                         <div class="col-xs-8 text-padded">
                             <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>{{ hero.goldMaintenance|nf }}</div>
-                            <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>{{ hero.manaMaintenance|nf }}</div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-users"></i>{{ hero.peopleMaintenance|nf }}</div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>{{ hero.manaMaintenance|nf }}</div>
                         </div>
                     </div>
                 </div>
@@ -193,6 +196,11 @@
                             <div class="col-xs-6"><i class="fa fa-fw fa-tint"></i>{{ spell.manaCost|nf }}</div>
                             <div class="col-xs-6"><i class="fa fa-fw fa-hourglass-half"></i>{{ spell.turnsCost|nf }}</div>
                             <div class="col-xs-6"><i class="fa fa-fw fa-hourglass"></i>{{ spell.turnsResearch }}</div>
+                            {% if spell.enchant %}
+                            <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>{{ spell.goldMaintenance|nf }}</div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-users"></i>{{ spell.peopleMaintenance|nf }}</div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>{{ spell.manaMaintenance|nf }}</div>
+                            {% endif %}
                         </div>
                     </div>
                 </div>
@@ -217,8 +225,8 @@
                         <div class="col-xs-4">
                             <img class="custom-thumbnail" src="{{ asset( artifact.image ) }}">
                         </div>
-                        <div class="col-xs-8 text-padded">
-                            <p><i class="fa fa-fw fa-joomla"></i>{{ artifact.description|raw }}</p>
+                        <div class="col-xs-8 text-only">
+                            <i class="fa fa-fw fa-joomla"></i>{{ artifact.description|raw }}
                         </div>
                     </div>
                 </div>
