--- a/src/Archmage/GameBundle/Resources/views/Kingdom/auction.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/auction.html.twig
@@ -41,6 +41,7 @@
                                 <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
                             </div>
                         </div>
+                        <input type="hidden" name="_csrf_token" value="{{ csrf_token('auction' ~ auction.id) }}">
                     </form>
                 </div>
             </div>
@@ -59,6 +60,11 @@
                             <div class="col-xs-6"><i class="fa fa-fw fa-tint"></i>{{ auction.research.spell.manaCost|nf }}</div>
                             <div class="col-xs-6"><i class="fa fa-fw fa-hourglass-half"></i>{{ auction.research.spell.turnsCost|nf }}</div>
                             <div class="col-xs-6"><i class="fa fa-fw fa-hourglass"></i>{{ auction.research.spell.turnsResearch|nf }}</div>
+                            {% if auction.research.spell.enchant %}
+                                <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>{{ auction.research.spell.goldMaintenance|nf }}</div>
+                                <div class="col-xs-4"><i class="fa fa-fw fa-users"></i>{{ auction.research.spell.peopleMaintenance|nf }}</div>
+                                <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>{{ auction.research.spell.manaMaintenance|nf }}</div>
+                            {% endif %}
                             <div class="col-xs-12"><i class="fa fa-fw fa-joomla"></i>{{ auction.research.spell.skill.description|raw }}</div>
                         </div>
                     </div>
@@ -76,6 +82,7 @@
                                 <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
                             </div>
                         </div>
+                        <input type="hidden" name="_csrf_token" value="{{ csrf_token('auction' ~ auction.id) }}">
                     </form>
                 </div>
             </div>
@@ -94,8 +101,8 @@
                             <div class="col-xs-4"><i class="fa fa-fw fa-shield"></i>{{ auction.troop.unit.defense|nf }}</div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-flash"></i>{{ auction.troop.unit.speed|nf }}</div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>{{ auction.troop.unit.goldMaintenance|nf }}</div>
-                            <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>{{ auction.troop.unit.manaMaintenance|nf }}</div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-users"></i>{{ auction.troop.unit.peopleMaintenance|nf }}</div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>{{ auction.troop.unit.manaMaintenance|nf }}</div>
                             <div class="col-xs-6"><i class="fa fa-fw fa-user"></i>{{ auction.troop.unit.family.name }}</div>
                             <div class="col-xs-6"><i class="fa fa-fw fa-cogs"></i>{{ auction.troop.unit.type.name }}</div>
                             <div class="col-xs-12"><i class="fa fa-fw fa-joomla"></i>{% if auction.troop.unit.skill is not null %}{{ auction.troop.unit.skill.description|raw }}{% else %}Ninguna{% endif %}</div>
@@ -115,6 +122,7 @@
                                 <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
                             </div>
                         </div>
+                        <input type="hidden" name="_csrf_token" value="{{ csrf_token('auction' ~ auction.id) }}">
                     </form>
                 </div>
             </div>
@@ -145,6 +153,7 @@
                                 <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
                             </div>
                         </div>
+                        <input type="hidden" name="_csrf_token" value="{{ csrf_token('auction' ~ auction.id) }}">
                     </form>
                 </div>
             </div>
