--- a/src/Archmage/GameBundle/Resources/views/Kingdom/tax.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/tax.html.twig
@@ -22,7 +22,7 @@
                     </div>
                 </div>
                 <div class="panel-footer text-center">
-                    <form class="form-inline" data-toggle="validator" action="{{ path('archmage_game_kingdom_tax') }}" method="post" role="form">
+                    <form id="tax" name="tax" class="form-inline" data-toggle="validator" action="{{ path('archmage_game_kingdom_tax') }}" method="post" role="form">
                         <div class="form-group has-feedback">
                             <div class="input-group">
                                 <div class="input-group-btn">
@@ -32,6 +32,7 @@
                                 <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
                             </div>
                         </div>
+                        <input type="hidden" name="_csrf_token" value="{{ csrf_token('tax') }}">
                     </form>
                 </div>
             </div>
