--- a/src/Archmage/GameBundle/Resources/views/Kingdom/auction.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/auction.html.twig
@@ -137,7 +137,7 @@
                             <img class="custom-thumbnail" src="{{ asset( auction.item.artifact.image ) }}" />
                         </div>
                         <div class="col-xs-8">
-                            <p><i class="fa fa-fw fa-joomla"></i>{{ auction.item.artifact.description|raw }}</p>
+                            <p><i class="fa fa-fw fa-joomla"></i>{{ auction.item.artifact.skill.description|raw }}</p>
                         </div>
                     </div>
                 </div>
