--- a/src/Archmage/GameBundle/Resources/views/Army/attack.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Army/attack.html.twig
@@ -11,40 +11,6 @@
             </div>
             <form id="attack" name="attack" class="form-inline" data-toggle="validator" action="{{ path('archmage_game_army_attack') }}" method="post" role="form">
                 <div class="row">
-                    {% for troop in player.troops if troop.quantity > 0 %}
-                    <div class="col-xs-12 col-md-6">
-                        <div class="panel panel-{{ troop.unit.faction.class }}">
-                            <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-group"></i><a href="{{ path('archmage_game_home_help') }}#{{ troop.unit.name|slug }}" class="link">{{ troop.unit.name }}</a> [{{ troop.quantity|nf }}]</div>
-                            <div class="panel-body text-responsive">
-                                <div class="row">
-                                    <div class="col-xs-3 col-sm-2">
-                                        <img class="custom-thumbnail" src="{{ asset( troop.unit.image ) }}">
-                                    </div>
-                                    <div class="col-xs-9 col-sm-10 text-center">
-
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    {% endfor %}
-                    {% for contract in player.contracts %}
-                        <div class="col-xs-12 col-md-6">
-                            <div class="panel panel-{{ contract.hero.faction.class }}">
-                                <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-user"></i><a href="{{ path('archmage_game_home_help') }}#{{ contract.hero.name|slug }}" class="link">{{ contract.hero.name }}</a></div>
-                                <div class="panel-body text-responsive">
-                                    <div class="row">
-                                        <div class="col-xs-3 col-sm-2">
-                                            <img class="custom-thumbnail" src="{{ asset( contract.hero.image ) }}">
-                                        </div>
-                                        <div class="col-xs-9 col-sm-10 text-center">
-                                            <input type="hidden" id="contract" name="contract" value="{{ contract.id }}" required />
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    {% endfor %}
                     <div class="col-xs-12 col-md-6 col-md-offset-3">
                         <div class="panel panel-default">
                             <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-cogs"></i>Opciones</div>
@@ -104,6 +70,51 @@
                                 <button type="submit" class="btn btn-default"><i class="fa fa-fw fa-lg fa-hourglass-half"></i>Atacar</button>
                             </div>
                         </div>
+                    </div>
+                    <div class="col-xs-12 col-md-6">
+                        {% for troop in player.troops if troop.quantity > 0 %}
+                        <div class="col-xs-12">
+                            <div class="panel panel-{{ troop.unit.faction.class }}">
+                                <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-group"></i><a href="{{ path('archmage_game_home_help') }}#{{ troop.unit.name|slug }}" class="link">{{ troop.unit.name }}</a> [{{ troop.quantity|nf }}]</div>
+                                <div class="panel-body text-responsive">
+                                    <div class="row">
+                                        <div class="col-xs-3 col-sm-2">
+                                            <img class="custom-thumbnail" src="{{ asset( troop.unit.image ) }}">
+                                        </div>
+                                        <div class="col-xs-9 col-sm-10 text-center">
+                                            <div class="form-group has-feedback">
+                                                <div class="input-group">
+                                                    <input type="number" class="form-control custom-input" id="quantity" name="quantity" min="" max="{{ troop.quantity }}" value="{{ troop.quantity }}" required />
+                                                    <input type="hidden" id="troop" name="troop" value="{{ troop.id }}" required />
+                                                    <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        {% endfor %}
+                    </div>
+                    <div class="col-xs-12 col-md-6">
+                        {% for contract in player.contracts %}
+                        <div class="col-xs-12">
+                            <div class="panel panel-{{ contract.hero.faction.class }}">
+                                <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-user"></i><a href="{{ path('archmage_game_home_help') }}#{{ contract.hero.name|slug }}" class="link">{{ contract.hero.name }}</a></div>
+                                <div class="panel-body text-responsive">
+                                    <div class="row">
+                                        <div class="col-xs-3 col-sm-2">
+                                            <img class="custom-thumbnail" src="{{ asset( contract.hero.image ) }}">
+                                        </div>
+                                        <div class="col-xs-9 col-sm-10 text-padded">
+                                            <i class="fa fa-fw fa-lg fa-joomla"></i>{{ contract.hero.skill.description|raw }}
+                                            <input type="hidden" id="contract" name="contract" value="{{ contract.id }}" required />
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        {% endfor %}
                     </div>
                 </div>
             </form>
