Terminado exploracion. Mejorados algunos views. Empezando researchratio.

--- a/src/Archmage/GameBundle/Resources/views/Kingdom/tax.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/tax.html.twig
@@ -16,8 +16,8 @@
                         <div class="col-xs-4">
                             <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/economy.jpg') }}">
                         </div>
-                        <div class="col-xs-8">
-                            <p>Aquí puedes aplicar impuestos desorbitados a tus leales súbditos para obtener grandes cantidades de <span class="label label-extra">Oro</span> rápidamente.</p>
+                        <div class="col-xs-8 text-padded">
+                            <div class="col-xs-12">Aquí puedes aplicar impuestos desorbitados a tus leales súbditos para obtener grandes cantidades de <span class="label label-extra">Oro</span> rápidamente.</div>
                         </div>
                     </div>
                 </div>
