--- a/src/Archmage/GameBundle/Resources/views/Magic/charge.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/charge.html.twig
@@ -16,8 +16,8 @@
                         <div class="col-xs-4">
                             <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/magic.jpg') }}">
                         </div>
-                        <div class="col-xs-8">
-                            <p>Aquí puedes recargar tus reservas de <span class="label label-extra">Maná</span> para lanzar los hechizos más caros y poderosos o pagar altos mantenimientos.</p>
+                        <div class="col-xs-8 text-padded">
+                            <div class="col-xs-12">Aquí puedes recargar tus reservas de <span class="label label-extra">Maná</span> para lanzar los hechizos más caros y poderosos o pagar altos mantenimientos.</div>
                         </div>
                     </div>
                 </div>
