--- a/src/Archmage/GameBundle/Resources/views/Territory/build.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Territory/build.html.twig
@@ -24,8 +24,8 @@
                             <img class="custom-thumbnail" src="{{ asset( construction.building.image ) }}">
                         </div>
                         {% if construction.building.name == 'Tierras' %}
-                        <div class="col-xs-8">
-                            <p>Aquí puedes invertir tus <span class="label label-extra">Tierras</span>, <span class="label label-extra">Población</span> y <span class="label label-extra">Oro</span> en construir edificios para aumentar tu reino.</p>
+                        <div class="col-xs-8 text-padded">
+                            <div class="col-xs-12">Aquí puedes invertir tus <span class="label label-extra">Tierras</span>, <span class="label label-extra">Población</span> y <span class="label label-extra">Oro</span> en construir edificios para aumentar tu reino.</div>
                         </div>
                         {% else %}
                         <div class="col-xs-8 text-padded">
