--- a/src/Archmage/GameBundle/Resources/views/Territory/demolish.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Territory/demolish.html.twig
@@ -24,8 +24,8 @@
                             <img class="custom-thumbnail" src="{{ asset( construction.building.image ) }}">
                         </div>
                         {% if construction.building.name == 'Tierras' %}
-                        <div class="col-xs-8">
-                            <p>Aquí puedes destruir tus estructuras para recuperar <span class="label label-extra">Tierras</span> y reutilizarlas en otros edificios.</p>
+                        <div class="col-xs-8 text-padded">
+                            <div class="col-xs-12">Aquí puedes destruir tus estructuras para recuperar <span class="label label-extra">Tierras</span> y reutilizarlas en otros edificios.</div>
                         </div>
                         {% else %}
                         <div class="col-xs-8 text-padded">
