--- a/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
@@ -13,7 +13,7 @@
         <div class="col-xs-12"><a name="objetivo"></a>
             <div class="panel panel-default">
                 <div class="panel-heading text-center">Objetivo</div>
-                <div class="panel-body text-responsive">
+                <div class="panel-body text-responsive text-only">
                     Información acerca del objetivo del juego.
                 </div>
             </div>
