Terminados mantenimientos de unidades en las fixtures, mejorado twigextension nf para que cambie 1000 por K y quepa en version movil sin saltar de linea. Mejoradas algunas vistas. Nuevas formulas en tax, charge y explore con explicacion en las twig.

--- a/src/Archmage/GameBundle/Resources/views/Kingdom/tax.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/tax.html.twig
@@ -21,6 +21,14 @@
                         </div>
                     </div>
                 </div>
+                <div class="panel-middle text-center">Fórmula</div>
+                <div class="panel-body text-responsive">
+                    <div class="row">
+                        <div class="col-xs-12 text-center text-only">
+                            ORO<sub>recaudado</sub> = ORO<sub>granjas</sub> * GRANJAS<sub>jugador</sub> * 2
+                        </div>
+                    </div>
+                </div>
                 <div class="panel-footer text-center">
                     <form id="tax" name="tax" class="form-inline" data-toggle="validator" action="{{ path('archmage_game_kingdom_tax') }}" method="post" role="form">
                         <div class="form-group has-feedback">
