--- a/src/Archmage/GameBundle/Resources/views/Magic/charge.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/charge.html.twig
@@ -21,6 +21,14 @@
                         </div>
                     </div>
                 </div>
+                <div class="panel-middle text-center">Fórmula</div>
+                <div class="panel-body text-responsive">
+                    <div class="row">
+                        <div class="col-xs-12 text-center text-only">
+                            MANA<sub>cargado</sub> = MANA<sub>nodos</sub> * NODOS<sub>jugador</sub> * 2
+                        </div>
+                    </div>
+                </div>
                 <div class="panel-footer text-center">
                     <form class="form-inline" data-toggle="validator" action="{{ path('archmage_game_magic_charge') }}" method="post">
                         <div class="form-group has-feedback">
