--- a/src/Archmage/GameBundle/Resources/views/Army/attack.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Army/attack.html.twig
@@ -73,21 +73,38 @@
                     </div>
                     <div class="col-xs-12 col-md-6">
                         {% for troop in player.troops if troop.quantity > 0 %}
-                        <div class="col-xs-12">
-                            <div class="panel panel-{{ troop.unit.faction.class }}">
-                                <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-group"></i><a href="{{ path('archmage_game_home_help') }}#{{ troop.unit.name|slug }}" class="link">{{ troop.unit.name }}</a> [{{ troop.quantity|nf }}]</div>
-                                <div class="panel-body text-responsive">
-                                    <div class="row">
-                                        <div class="col-xs-3 col-sm-2">
-                                            <img class="custom-thumbnail" src="{{ asset( troop.unit.image ) }}">
+                        <div class="row">
+                            <div class="col-xs-12">
+                                <div class="panel panel-default">
+                                    <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-group"></i><a href="{{ path('archmage_game_home_help') }}#{{ troop.unit.name|slug }}" class="link">{{ troop.unit.name }}</a> [{{ troop.quantity|nf }}]</div>
+                                    <div class="panel-body text-responsive">
+                                        <div class="row">
+                                            <div class="col-xs-4">
+                                                <img class="custom-thumbnail" src="{{ asset( troop.unit.image ) }}">
+                                            </div>
+                                            <div class="col-xs-8 text-padded">
+                                                {# row #}
+                                                <div class="col-xs-4"><i class="fa fa-fw fa-crosshairs"></i>{{ troop.unit.attack|nf }}</div>
+                                                <div class="col-xs-4"><i class="fa fa-fw fa-shield"></i>{{ troop.unit.defense|nf }}</div>
+                                                <div class="col-xs-4"><i class="fa fa-fw fa-flash"></i>{{ troop.unit.speed|nf }}</div>
+                                                {# row #}
+                                                <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>{{ troop.unit.goldMaintenance|nf }}</div>
+                                                <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>{{ troop.unit.peopleMaintenance|nf }}</div>
+                                                <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>{{ troop.unit.manaMaintenance|nf }}</div>
+                                                {# row #}
+                                                <div class="col-xs-6"><i class="fa fa-fw fa-user"></i><a href="#">{{ troop.unit.family.name }}</a></div>
+                                                <div class="col-xs-6"><i class="fa fa-fw fa-cogs"></i><a href="#">{{ troop.unit.type.name }}</a></div>
+                                                {# row #}
+                                                <div class="col-xs-12"><i class="fa fa-fw fa-joomla"></i><a href="#">Habilidad</a></div>
+                                            </div>
                                         </div>
-                                        <div class="col-xs-9 col-sm-10 text-center">
-                                            <div class="form-group has-feedback">
-                                                <div class="input-group">
-                                                    <input type="number" class="form-control custom-input" id="quantity" name="quantity" min="" max="{{ troop.quantity }}" value="{{ troop.quantity }}" required />
-                                                    <input type="hidden" id="troop" name="troop" value="{{ troop.id }}" required />
-                                                    <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
-                                                </div>
+                                    </div>
+                                    <div class="panel-footer text-center">
+                                        <div class="form-group has-feedback">
+                                            <div class="input-group">
+                                                <input type="number" class="form-control" id="quantity" name="quantity" min="0" max="{{ troop.quantity }}" value="{{ troop.quantity }}" required />
+                                                <input type="hidden" id="troop" name="troop" value="{{ troop.id }}" required />
+                                                <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
                                             </div>
                                         </div>
                                     </div>
@@ -98,18 +115,25 @@
                     </div>
                     <div class="col-xs-12 col-md-6">
                         {% for contract in player.contracts %}
-                        <div class="col-xs-12">
-                            <div class="panel panel-{{ contract.hero.faction.class }}">
-                                <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-user"></i><a href="{{ path('archmage_game_home_help') }}#{{ contract.hero.name|slug }}" class="link">{{ contract.hero.name }}</a></div>
-                                <div class="panel-body text-responsive">
-                                    <div class="row">
-                                        <div class="col-xs-3 col-sm-2">
-                                            <img class="custom-thumbnail" src="{{ asset( contract.hero.image ) }}">
+                        <div class="row">
+                            <div class="col-xs-12">
+                                <div class="panel panel-{{ contract.hero.faction.class }}">
+                                    <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-user"></i><a href="{{ path( 'archmage_game_home_help' ) }}#{{ contract.hero.name|slug }}" class="link">{{ contract.hero.name }}</a></div>
+                                    <div class="panel-body text-responsive">
+                                        <div class="row">
+                                            <div class="col-xs-4">
+                                                <img class="custom-thumbnail" src="{{ asset( contract.hero.image ) }}" />
+                                            </div>
+                                            <div class="col-xs-8 text-padded">
+                                                {# row #}
+                                                <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>{{ contract.hero.goldMaintenance|nf }}</div>
+                                                <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>{{ contract.hero.manaMaintenance|nf }}</div>
+                                                <div class="col-xs-4"><i class="fa fa-fw fa-users"></i>{{ contract.hero.peopleMaintenance|nf }}</div>
+                                            </div>
                                         </div>
-                                        <div class="col-xs-9 col-sm-10 text-padded">
-                                            <i class="fa fa-fw fa-lg fa-joomla"></i>{{ contract.hero.skill.description|raw }}
-                                            <input type="hidden" id="contract" name="contract" value="{{ contract.id }}" required />
-                                        </div>
+                                    </div>
+                                    <div class="panel-footer text-center text-responsive">
+                                        <i class="fa fa-fw fa-joomla"></i>{% if contract.hero.skill %}{{ contract.hero.skill.description|raw }}{% else %}Ninguna{% endif %}
                                     </div>
                                 </div>
                             </div>
