--- a/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
@@ -94,15 +94,15 @@
                             <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>{{ building.goldCost|nf }}</div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-users"></i>{{ building.peopleCost|nf }}</div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>{{ building.manaCost|nf }}</div>
-
+                            {# row #}
                             <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>{{ building.goldResource|nf }}</div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-users"></i>{{ building.peopleResource|nf }}</div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>{{ building.manaResource|nf }}</div>
-
+                            {# row #}
                             <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>{{ building.goldCap|nf }}</div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-users"></i>{{ building.peopleCap|nf }}</div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>{{ building.manaCap|nf }}</div>
-
+                            {# row #}
                             <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>{{ building.goldMaintenance|nf }}</div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-users"></i>{{ building.peopleMaintenance|nf }}</div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>{{ building.manaMaintenance|nf }}</div>
@@ -134,11 +134,14 @@
                             <div class="col-xs-4"><i class="fa fa-fw fa-crosshairs"></i>{{ unit.attack|nf }}</div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-shield"></i>{{ unit.defense|nf }}</div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-flash"></i>{{ unit.speed }}</div>
+                            {# row #}
                             <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>{{ unit.goldMaintenance|nf }}</div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-users"></i>{{ unit.peopleMaintenance|nf }}</div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>{{ unit.manaMaintenance|nf }}</div>
+                            {# row #}
                             <div class="col-xs-6"><i class="fa fa-fw fa-user"></i>{{ unit.family.name }}</div>
                             <div class="col-xs-6"><i class="fa fa-fw fa-cogs"></i>{{ unit.type.name }}</div>
+                            {# row #}
                             <div class="col-xs-12 text-lore"><small><i><i class="fa fa-fw fa-quote-left"></i> {{ unit.lore }} <i class="fa fa-fw fa-quote-right"></i></i></small></div>
                         </div>
                     </div>
@@ -168,8 +171,8 @@
                             <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>{{ hero.goldMaintenance|nf }}</div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-users"></i>{{ hero.peopleMaintenance|nf }}</div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>{{ hero.manaMaintenance|nf }}</div>
+                            {# row #}
                             <div class="col-xs-12 text-lore"><small><i><i class="fa fa-fw fa-quote-left"></i> {{ hero.lore }} <i class="fa fa-fw fa-quote-right"></i></i></small></div>
-
                         </div>
                     </div>
                 </div>
@@ -197,13 +200,16 @@
                         <div class="col-xs-8 text-padded">
                             <div class="col-xs-6"><i class="fa fa-fw fa-magic"></i>{{ spell.magic|nf }}</div>
                             <div class="col-xs-6"><i class="fa fa-fw fa-tint"></i>{{ spell.manaCost|nf }}</div>
+                            {# row #}
                             <div class="col-xs-6"><i class="fa fa-fw fa-hourglass-half"></i>{{ spell.turnsCost|nf }}</div>
                             <div class="col-xs-6"><i class="fa fa-fw fa-hourglass"></i>{{ spell.turnsResearch }}</div>
+                            {# row #}
                             {% if spell.enchant %}
                             <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>{{ spell.goldMaintenance|nf }}</div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-users"></i>{{ spell.peopleMaintenance|nf }}</div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>{{ spell.manaMaintenance|nf }}</div>
                             {% endif %}
+                            {# row #}
                             <div class="col-xs-12 text-lore"><small><i><i class="fa fa-fw fa-quote-left"></i> {{ spell.lore }} <i class="fa fa-fw fa-quote-right"></i></i></small></div>
                         </div>
                     </div>
@@ -231,6 +237,7 @@
                         </div>
                         <div class="col-xs-8 text-padded">
                             <div class="col-xs-12"><i class="fa fa-fw fa-joomla"></i>{{ artifact.skill.description|raw }}</div>
+                            {# row #}
                             <div class="col-xs-12 text-lore"><small><i><i class="fa fa-fw fa-quote-left"></i> {{ artifact.lore }} <i class="fa fa-fw fa-quote-right"></i></i></small></div>
                         </div>
                     </div>
