--- a/src/Archmage/GameBundle/Resources/views/Territory/explore.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Territory/explore.html.twig
@@ -21,6 +21,14 @@
                         </div>
                     </div>
                 </div>
+                <div class="panel-middle text-center">Fórmula</div>
+                <div class="panel-body text-responsive">
+                    <div class="row">
+                        <div class="col-xs-12 text-center text-only">
+                            TIERRAS<sub>exploradas</sub> = (3500 - TIERRAS<sub>jugador</sub> + 333) / 333
+                        </div>
+                    </div>
+                </div>
                 <div class="panel-footer text-center">
                     <form class="form-inline" data-toggle="validator" action="{{ path('archmage_game_territory_explore') }}" method="post" role="form">
                         <div class="form-group has-feedback">
